--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.0.23",
     "primeicons": "^6.0.1",
     "primevue": "^3.20.0",
+    "socket.io-client": "^4.5.4",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
